# django-admintheme-dsgovbr

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  MANIFEST.in  PUBLISHING.md  README.md  SECURITY.md  VERSIONS.md  doc8.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  publish-to-pypi.yml  test.yml
docs/: conf.py  contribute.md  contribute.rst  index.md  index.rst  publishing.md  publishing.rst  start-guide.md  start-guide.rst
sandbox/: README.md
sandbox/accounts/: __init__.py  admin.py  apps.py  models.py
sandbox/accounts/migrations/: 0001_initial.py
sandbox/atendimento/: __init__.py  admin.py  apps.py  models.py
sandbox/atendimento/migrations/: 0001_initial.py
sandbox/cadastro/: admin.py  apps.py  models.py
sandbox/cadastro/migrations/: 0001_initial.py
sandbox/config/: settings.py  urls.py
sandbox/core/: apps.py  menus.py  urls.py  views.py
sandbox/core/management/commands/: seed_sandbox.py
sandbox/core/templates/core/: base.html  dashboard.html  home.html  search.html
sandbox/demo/: admin.py  apps.py  models.py
sandbox/editorial/: __init__.py  admin.py  apps.py  models.py
sandbox/editorial/migrations/: 0001_initial.py
sandbox/eventos/: __init__.py  admin.py  apps.py  models.py
sandbox/eventos/migrations/: 0001_initial.py
sandbox/media_library/: __init__.py  admin.py  apps.py  models.py
sandbox/media_library/migrations/: 0001_initial.py
sandbox/public_forms/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
sandbox/public_forms/migrations/: 0001_initial.py
sandbox/qa_orchestrator/: __init__.py  apps.py  urls.py  views.py
sandbox/static_root/CACHE/: manifest.json
sandbox/ui_showcase/: __init__.py  apps.py  urls.py  views.py
src/dsgovbr/: admin.py  apps.py  compressor_filters.py  context_processors.py  menus.py
src/dsgovbr/admin/: __init__.py  import_export.py
src/dsgovbr/templates/admin/: app_list.html  (+11 more)
src/dsgovbr/templatetags/: dsgovbr.py  dsgovbr_admin_list.py
tests/: test_context_processors.py  test_menus.py
(+36 files in other folders)
